Fixed safari scrollbar issue

--- a/css/stormcloud.css
+++ b/css/stormcloud.css
@@ -67,6 +67,7 @@ html, body {
     background-color: #abd6ff;
     background-repeat: repeat-x;
     background-image: linear-gradient(rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0) 100%);
+    overflow: hidden;
 
 }
 
